[package]
name = "hello-tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]] # 用来运行 HelloWorld gRPC 服务器的可执行文件
name = "hello-server"
path = "src/server.rs"
[[bin]] # 用来运行 HelloWorld gRPC 客户端的可执行文件
name = "hello-client"
path = "src/client.rs"


[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.8"
