[package]
name = "hello-tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tower = { version = "0.4", features = ["full"] }
axum = "0.6"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }


[build-dependencies]
tonic-build = "0.8"
